libphx/include/Shader.h

PHX_API Shader*       Shader_Load           (cstr vertName, cstr fragName);
PHX_API void          Shader_Start          (Shader*);
PHX_API void          Shader_Stop           (Shader*);
PHX_API void          Shader_SetFloat       (cstr, float);
PHX_API void          Shader_SetInt         (cstr, int);
PHX_API void          Shader_SetTex2D       (cstr, Tex2D*);
PHX_API void          Shader_SetTex3D       (cstr, Tex3D*);