libphx/src/cpp/include/Common.h

  typedef char const*    cstr;
  typedef int32_t        int32;
  OPAQUE_T Mesh;
  OPAQUE_T Shader;
  OPAQUE_T Tex2D;
  OPAQUE_T Tex3D;
  typedef struct Mesh Mesh;
  typedef struct Shader Shader;
  typedef struct Tex2D Tex2D;
  typedef struct Tex3D Tex3D;
  STRUCT_T Vec4f;
  STRUCT_T Vertex;
  typedef struct Vec4f Vec4f;
  typedef struct Vertex Vertex;
  ENUM_T typedef int32  DataFormat;
  ENUM_T typedef int32  PixelFormat;
  ENUM_T typedef int32  TexFormat;